adds first pass of content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-<p>Hello, World!</p>
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Tech Events Happening in Dayton, Ohio</title>
+  <meta name="description" content="A list of tech-related events in the Dayton, Ohio area.">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Sparkbox"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+</head>
+
+<body>
+  <article>
+    <h2><a href="https://www.girldevelopit.com/chapters/dayton">GDI Dayton</a></h2>
+    <p>Check out GDI on <a href="http://www.meetup.com/Girl-Develop-It-Dayton/">meetup.com</a>.</p>
+    <p>Girl Develop It is a 503(c) organization directed at giving women a safe, judgement free space to learn code. They host “Code and Coffee” events roughly once a month, a number of classes that span one to five weeks, and informational panels addressing tech topics given by women in the local tech community.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/dayton-web-developers/">Dayton Web Developer Meetup</a></h2>
+    <p>The Dayton Web Developers group is the longest running Dayton, Ohio Meetup group focused on the craft of Web Development.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://daytoncleancoders.com/">Dayton CleanCoders</a></h2>
+    <p>Dayton Clean Coders is a monthly meetup of developers who have a desire to share, practice and contribute to clean code.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://gemcityjs.com/">Gem City JS</a></h2>
+    <p>Gem City JS is a meetup of web developers who share a desire to share and learn more about JavaScript.</p>
+  </article>
+
+  <article>
+    <h2><a href="https://www.startupgrind.com/dayton/">Startup Grind Dayton</a></h2>
+    <p>Startup Grind is an event series and website designed to help educate, inspire, and connect local entrepreneurs. Each month we welcome an amazing speaker who shares their story with our community and tells us what worked, what didn't, and what they'll do differently next time. It's an amazing opportunity to learn from the best, network with other members of the startup community, and improve your chances of entrepreneurial success.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/daytonrb/">Dayton Ruby Brigade</a></h2>
+    <p>We are group of programmers, students, and technology enthusiasts who are excited about the Ruby programming language and the Ruby on Rails web framework. We meet on the fourth Tuesday of every month to contribute to open source, work on personal projects, and present topics related to Ruby. All skill levels are welcome!</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/UXDayton/">UX Dayton</a></h2>
+    <p>The UX Dayton Meetup is for anyone who is interested in improving technology for the people who use it.</p>
+    <p>UX Dayton is for those who work in corporate enterprises, governmental industries, small businesses, startups, and academia. If you have something to share come join us; we welcome everyone from seasoned professionals to students and novices - no previous UX experience is necessary.</p>
+    <p>We plan on having topical presenters, open roundtables, social networking meet and greets, job information exchanges, case studies, techniques, group design reviews, and interactive workshop sessions. Let's meetup and improve technology for the people who use it.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/d8ndiode/">Dayton Diode</a></h2>
+    <p>Dayton's Makerspace: an open community workshop for learning, making and hacking Android, Arduino microcontrollers, robots, metal casting, carpentry, CNC, etc.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/daytondv/">Dayton Data Visualization</a></h2>
+    <p>Dayton area software developers interested in Data Visualization. We plan on having discussions around anything related to data visualization, from libraries and frameworks to design and storytelling. Topics will include (but not limited to): Infographic Design and Development, Web Mapping, D3.js, R, Tableau, Matlab, Processing, Hadoop, Data Mining, etc... Anything to do with the design/development of awesome visualizations! All skill levels are welcome.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/Code-for-Dayton/">Code For Dayton</a></h2>
+    <p>We're a group of developers, designers, writers, creators, thinkers and civic-minded people that want to use our skills to solve problems, open data and enhance life in the Dayton region. We work with civic and community leaders and collaborate on projects. We host hackathons and regular hack nights to produce really cool mobile and web apps that solve problems and help people.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/Dayton-WordPress/">Dayton Wordpress</a></h2>
+    <p>From novice to expert, Dayton WordPress brings it all together. In Dayton, Ohio and surrounding areas: share - build - grow.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/Dayton-OH-Drone-User-Group/">Dayton Drone User Group</a></h2>
+    <p>The Dayton OH Drone User Group (DUG) is an organization for amateur and professional drone users that seeks to promote the responsible use of flying robots for community service, artistic, entrepreneurial, and recreational purposes. All experience levels are welcome. We get together as a community to share tips, experiences, and of course to do some flying. We work to educate ourselves about how to build and use drones in a safe and respectful manner and to educate the public about the positive role aerial robotics can play in our society. Most importantly, we think that flying robots are a lot of fun! Dayton OH DUG is a member of the Drone User Group Network, an association of community organizations that promote the use of civilian drone technology for the benefit of humanity.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/Dayton-Cyber-Security/">Dayton Cyber Security Meetup</a></h2>
+    <p>This is a group for anyone interested in cyber security research.  We will hold monthly events to discuss unconventional and creative blackhat hacking techniques and the implementation of defensive countermeasures.  This meetup strives to take a proactive approach to cyber security through full disclosure of attack methodology by conducting proof-of-concept technical demonstrations and holding open discussion to raise awareness.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/Dayton-Dynamic-Languages-User-Group/">Dayton Dynamic Languages User Group</a></h2>
+    <p>The Dayton Dynamic Language User Group is primarily focused on, as you can tell by the name, dynamic languages. If you're interested in Ruby (including Rails), Python (including Django), PHP, Perl, Javascript, Scheme, Lisp, Smalltalk, etc, this is probably the place for you. We try not to talk specifically about things like C and Java, but there are no hard and fast rules (especially if you're comparing them to a dynamic language).</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/CodePen-Dayton/">CodePen Dayton</a></h2>
+    <p>This group is for those fans of CodePen, it doesn't matter if you're a beginner or an expert in Web Design, Front-End Development, HTML, CSS, JavaScript, etc.</p>
+    <p>Our main objective is to share knowledge about Web Design and Web Development using CodePen as our coding tool.</p>
+    <p>Have a question about those new HTML5 elements? Or a question about CSS grids? Or what about a particular functionality with JavaScript? We will answer all those questions using CodePen.</p>
+  </article>
+
+  <article>
+    <h2><a href="http://www.meetup.com/drupal-dayton/">Dayton Drupal Users Group</a></h2>
+    <p>Drupal users in Dayton Ohio looking to share their knowledge, expertise and experiences. Membership includes hobbyists to professionals.</p>
+  </article>
+</body>
+</html>
